# Historical-images-and-Spatial-restoration_V1

./: .gitignore  01_v1.py  02_v1.py  03_v1.py  04_v1.py  README.md  get_camera_position.html  get_camera_position_and_elevation.html  labelimg_for_history_photos.html  pyproject.toml
before/: 03_v1.py  04_v1.py
client/: nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js
client/app/: app.vue
client/app/components/: CanvasViewer.vue  CoordinateInput.vue  PointList.vue  appBar.vue  error.vue
client/app/config/: config.ts
client/app/layouts/: default.vue
client/app/pages/: buildingPoints.vue  buildsPoint.vue  coordinateTransformation.vue  imageUpload.vue  index.vue  labelling.vue  reestablishment.vue
client/app/utils/: request.ts  types.ts
recycle/: logger.py  main.py  schema.py  utils.py
web/: app.py  config.py  database.py  main.py
web/alembic/: env.py
web/alembic/versions/: 6a458a116f11_initial_migration.py  803c946da26c_initial_migration1.py
web/model/: building_point.py  camera_param.py  feature.py  images.py  label.py
web/router/: __init__.py  api.py  building_points.py  camera.py  camera_position.py  dotting_view.py  features.py  images.py  save_dot.py  upload.py
web/schema/: building_point.py  features.py  image.py
web/service/recycle/: geo_transformer.py  main.py  schema.py  utils.py
web/static/css/: labelimg.css
web/static/js/: dataHandler.js  imageProcessor.js  labelimg.js  main.js  pointManager.js  toast.js  uiHandler.js
web/templates/: labelimg_for_history_photos.html
