[project]
name = "Historical-images-and-Spatial-restoration_V1"
version = "0.1.0"
description = "Default template for PDM package"
dependencies = [
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "matplotlib>=3.10.3",
    "pyproj>=3.7.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "geopandas>=1.0.1",
    "shapely>=2.1.1",
    "plotly>=6.1.2",
    "rasterio>=1.4.3",
    "trimesh>=4.6.10",
    "tk>=0.1.0",
    "pydantic>=2.11.7",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "pydantic-settings>=2.10.1",
]
requires-python = ">=3.10"
readme = "README.md"

[[project.authors]]
name = "XuChenXu"
email = "91937041+ChenXu233@users.noreply.github.com"

[project.license]
text = "MIT"

[tool.pdm]
distribution = false
